# OCRProject

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
